# moira

./: .gitattributes  .gitignore  .gitmodules  .tmp_none_rows.tsv  CHANGELOG.md  CLEANUP_COMPLETE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPORT_GOVERNANCE_SUMMARY.md  FRAME_CONVENTIONS_EXPLAINED.md  LICENSE  MANIFEST.in  MOIRA_COMPETITIVE_ANALYSIS.md  MOON_ERROR_INVESTIGATION.md  NUMPY_REMOVAL_AUDIT_REPORT.md  ORACLE_VALIDATION_COMPLETE.md  README.md  SECURITY.md  SHARD_16_REMOVAL.md  SYNC_POLICY.md  TIER2_VEDIC_WORK_TRACKER.md  _write_strip.py  app.py  architecture_summary.md  conftest.py  docstring_compliance_plan.md  echo_test.py  export_governance_report.md  fix_annotations.py  fix_manifest.py  full_house_out.txt  governance_audit_final.txt  governance_audit_final_2.txt  governance_audit_final_2_utf8.txt  governance_audit_final_3.txt  governance_audit_final_3_utf8.txt  hardening_out.txt  last_commit.diff  llms-full.txt  (+39 more)
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pypi-publish.yml  release-acceptance.yml  release-hardening.yml
docs/: threading.md
docs/architecture/: MOIRA_NATIVE_BACKEND_ARCHITECTURE.md  MOIRA_NATIVE_CLOSURE_PROGRAM.md  MOIRA_NATIVE_MIGRATION_TRACKER.md  MOIRA_NATIVE_PERSISTENT_KERNEL_STORE.md  MOIRA_NATIVE_PLANETARY_CASH_IN_PLAN.md  MOIRA_NATIVE_PLANETARY_CLOSURE_TRACKER.md  MOIRA_NATIVE_PLANETARY_FINISH_PROOF.md  MOIRA_NATIVE_PLANETARY_PATH.md  MOIRA_NATIVE_PLANETARY_RETROSPECTIVE.md  MOIRA_NATIVE_PUBLIC_PLANETARY_EVALUATOR.md  MOIRA_NATIVE_PUBLIC_PLANETARY_EVALUATOR_SPEC.md  MOIRA_NATIVE_TYPE13_EVALUATION_COMPLETION_PLAN.md  MOIRA_NUMPY_SPICE_DEPENDENCY_MAP.md  MOIRA_PYTHON_GOVERNED_NATIVE_STRENGTHENING.md  MOIRA_SERVER_BOUNDARY.md  MOIRA_SERVER_FULL_ENGINE_EXPOSURE_PLAN.md  MOIRA_SERVER_IMPLEMENTATION_PLAN.md  MOIRA_SERVER_PHASE8_LEDGER.md  (+8 more)
moira/: __init__.py  _facade_astronomy.py  _facade_classical.py  _facade_core.py  _facade_kernel.py  _facade_predictive.py  _facade_relationships.py  _facade_spatial.py  _facade_special.py  _kernel_paths.py  _solar.py  _spk_body_kernel.py  antiscia.py  ashtakavarga.py  aspects.py  asteroid_families.py  asteroids.py  astrocartography.py  babylonian.py  batch.py  behenian_stars.py  centaurs.py  chart.py  chart_shape.py  classical.py  classical_asteroids.py  comets.py  constants.py  coordinates.py  corrections.py  cycles.py  daf_writer.py  daf_writer_ui.py  dasha.py  dasha_systems.py  decanates.py  delta_t_physical.py  dignities.py  dignities_types.py  dispatch.py  (+101 more)
moira/sky/: time.py  (+10 more)
moira_server/: __init__.py  app.py  config.py  dependencies.py  errors.py  lifecycle.py
scratch/: audit_governance.py  benchmark_heliacal_performance.py  check_encodings.py  compare_flora_kernels.py  count_loc.py  debug_besselian_corrections.py  debug_coords.py  debug_jd_roundtrip.py  diagnose_flora.py  diagnose_flora_details.py  house_cusps_output.txt  mars_decade_search.py  mercury_venus_search.py  output.txt  output_clean.txt  patch_all_files.py  test_3d_houses.py  test_acg_parity.py  test_acg_v2.py  test_aspect_transits.py  test_batch.py  test_spline_parity.py  tester_comparison_output.txt  verify_lunar_acg.py  verify_tester_asteroids.py  verify_tester_comparison.py  verify_tester_houses.py
scripts/: SCRIPTS_CLEANUP_NOTICE.md  _check_apollo.py  _check_apollo_in_official.py  _check_apollo_solutions.py  _check_existing_apollo.py  _diag_all_minor_bodies.py  _diag_eclipse_timing2.py  _diag_eclipse_timing3.py  _diag_eclipse_timing4.py  _diag_eclipse_timing7.py  _diag_eclipse_timing8.py  _investigate_moon_error.py  _list_asteroid_comet_bodies.py  _moon_apparent_vs_geometric.py  _moon_error_simple.py  _stress_electional.py  _test_validated_chunking.py  _trace_chunk_boundary.py  accuracy_report.py  audit_phase3_search.py  audit_phase4_edge_cases.py  benchmark_cartography.py  benchmark_native_eclipse.py  benchmark_native_phase1_sidereal.py  benchmark_native_phase2_all_planets.py  benchmark_native_phase2_catalog.py  benchmark_native_phase2_ephemeris.py  benchmark_native_phase2_planet_at.py  benchmark_native_phase2_small_bodies.py  benchmark_suite.py  benchmark_swiss_planetary_reference.py  benchmark_type13_native_vs_fallback.py  build_custom_type13_asteroid_kernel.py  build_eclipse_catalog_comparison.py  build_notebooklm_sources.py  build_parans_horizons_fixture.py  build_progressions_swetest_fixture.py  build_rise_set_horizons_fixture.py  build_sb441_type13_shards.py  build_sovereign_substrate.py  (+40 more)
tests/: DIURNAL_ABERRATION_COMPLETE_SUMMARY.md  DIURNAL_ABERRATION_FINAL_SUMMARY.md  DIURNAL_ABERRATION_INTEGRATION_SUMMARY.md  DIURNAL_ABERRATION_TEST_SUMMARY.md  KNOWN_ISSUES.yml  benchmark_lola_filters.py  conftest.py  oracle_lunar_limb_baseline.json  test_api_reference_validation.py  test_diurnal_aberration_performance.py  test_diurnal_aberration_properties.py  test_diurnal_aberration_units.py  test_failure.txt  test_failure_4.txt  test_failure_7.txt  test_forge_strength.py  test_lola_cache.py  test_lola_properties.py  test_lunar_cartography.py  test_native_full_audit.py  test_native_parity.py  test_native_sidereal_phase1.py  validate_lunar_limb_oracle.py
tmp/: 25garcian.html  _sidereal_compare.py  _star_catalog_probe.py  _star_event_diag.py  _sun_alt_compare.py  all_py_files.txt  append_wrapper.py  audit_all.py  audit_bindings.py  audit_deep.py  audit_divzero.py  audit_drift.py  audit_security.py  bulk_migrate.py  check_violations.py  codebase_stats.py  constellation_census.py  daf_writer_ui_template.csv  debug_astrometry.py  debug_placidus.py  diagnose_mod001.py  drift_diff_full.patch  drift_ledger.md  drift_structural.md  drift_summary.json  drift_symbols.md  find_dups.py  mars_heliacal_2026.py  mars_heliacal_horizons.py  recursive_stabilize.py  scan_node_divergence.py  scan_node_divergence2.py  star_predictions_probe.py  stars_old.py  stellar_heliacal_multiyear.py  stellar_heliacal_validation.py  test_jitter.py  venus_heliacal_horizons.py  venus_horizons_check.py  verify_dups.py  (+1 more)
tools/: test_runner_ui.py
wiki/: Home.md
(+783 files in other folders)
