[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moira-astro"
version = "2.0.3"
description = "Pure Python ephemeris and astrology engine built on JPL DE441 and SPK kernels."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Moira contributors" },
]
keywords = [
    "astronomy",
    "astrology",
    "ephemeris",
    "jpl",
    "spk",
    "sidereal",
    "houses",
    "transits",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "jplephem>=2.24",
    "scipy>=1.14",
    "spiceypy>=8.0",
    "laspy[lazrs]>=2.7",
]

[project.urls]
Homepage = "https://github.com/TheDaniel166/moira"
Repository = "https://github.com/TheDaniel166/moira"
Issues = "https://github.com/TheDaniel166/moira/issues"

[project.optional-dependencies]
fast = [
    "numpy>=1.24",
]
dev = [
    "build>=1.2",
    "twine>=6.0",
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "pyyaml>=6.0",
    "hypothesis>=6.100",
    "pyerfa>=2.0",
    "astropy>=6.0",
]

[project.scripts]
moira-download-kernels = "moira.download_kernels:main"
moira-kernel-manager   = "moira.kernel_manager_ui:main"

[tool.setuptools]
packages = ["moira", "moira.data", "moira.compat", "moira.compat.nasa", "moira.constellations", "moira.primary_directions", "moira.harmograms", "moira.bridges"]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
moira = [
    "data/*.txt",
    "data/*.csv",
    "data/*.json",
    "kernels/*.bsp",
]

[tool.pytest.ini_options]
testpaths    = ["tests"]
pythonpath   = [".", "tests"] # repo-local code and test utilities only
addopts      = "-ra -q --import-mode=importlib"
norecursedirs = [".git", ".venv", ".hypothesis", ".pytest_cache", "__pycache__", "dist", "tmp"]
markers = [
    "unit:            fast, isolated unit tests",
    "integration:     tests that exercise multiple modules or use de441.bsp",
    "network:         tests that need outbound network access",
    "slow:            tests that take more than ~5 seconds",
    "requires_ephemeris: tests that need de441.bsp to be present",
    "property:        property-based tests (Hypothesis)",
    "template:        template/boilerplate tests (opt-in via ISOPGEM_RUN_TEMPLATES=1)",
    "experimental:    experimental tests (opt-in via ISOPGEM_RUN_EXPERIMENTAL=1)",
    "parallel:        safe to run in parallel with pytest-xdist",
    "serial:          must run serially (global state / file locks)",
]
